# laser_emulator

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  laser.h  laser_emulator.cpp  laser_emulator.h  protocol.cpp  protocol.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  laser_emulator.cpp  protocol.cpp
test/mock/: laser.h
